files/yelb/yelb-k8s-ingress-alb-ip.yaml
# This should work on Kubernetes deployments on AWS that have an ALB ingress controller deployed. 
# This uses the IP mechanism and so it will work with both standard worker nodes as well as EKS/Fargate. 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "yelb-ui"
  namespace: fargate
  annotations:
    kubernetes.io/ingress.class: alb # check this, your ingress.class may be different 
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: ip 
  labels:
    app: "yelb-ui"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "yelb-ui"
              servicePort: 80
